# remote-camera

./: LICENSE  README.md  config.json  remote-camera.cabal
app/: Main.hs
scripts/: generate-hls-video.sh  stream-server.sh  test-generate-video.sh  test-stream-server.sh
static/: index.html  remote-video.js  style.css
