name:                remote-camera
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hangman-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable remote-camera-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai
                     , wai-middleware-static
                     , aeson
                     , directory
                     , bytestring
                     , filepath
                     , process
                     , transformers
                     , mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hangman-server
