name:                remote-camera
version:             0.1.0.0
synopsis:            A server for serving live video from a raspberry pi
description:         Please see README.md
homepage:            https://github.com/githubuser/hangman-server#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Sullivan
maintainer:          iansullivan88@gmail.com
copyright:           2017 Ian Sullivan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable remote-camera-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts
  build-depends:       base >= 4.7 && < 5
                     , scotty
                     , wai
                     , wai-middleware-static
                     , aeson
                     , directory
                     , bytestring
                     , filepath
                     , process
                     , transformers
                     , mtl
                     , time
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iansullivan88/remote-camera
